# jellyping

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  main.go  sqlc.yaml
internal/: app.go
internal/bot/: bot.go
internal/db/migrations/: 20250621123309_initial_table.sql
internal/db/queries/: user.sql
migrations/: 20250429140553_User_table.sql
models/: config.go  jellyfin_user.go  jellyseer_payload.go
repositories/: models.go  user.sql.go
routes/: router.go  user_router.go
services/: user_service.go
src/: bot.rs  main.rs  models.rs  router.rs
src/handlers/: users.rs
src/models/: config.rs  payload.rs  state.rs
utils/: utils.go
