[package]
name = "jellyping"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
chrono = { version = "0.4.40", features = ["serde"] }
dotenv = "0.15.0"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "chrono",
    "macros",
] }
teloxide = { version = "0.15.0", features = ["macros"] }
tokio = { version = "1.44.2", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
